// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFunctionalComponentPrevNextButtonStyles() should return correct Styles 1`] = `
Object {
  "action": Object {
    "&--hidden": Object {
      "visibility": "hidden",
    },
    "&--next": Object {
      "& $gradient": Object {
        "background": "linear-gradient(90deg, #f2f2f200 0%, #f2f2f2 50%)",
      },
      "justifyContent": "flex-end",
      "right": 0,
    },
    "&--prev": Object {
      "& $gradient": Object {
        "background": "linear-gradient(90deg, #f2f2f2 50%, #f2f2f200 100%)",
      },
      "justifyContent": "flex-start",
      "left": 0,
    },
    "alignItems": "center",
    "display": "flex",
    "height": "100%",
    "position": "absolute",
    "top": 0,
  },
  "button": Object {
    "position": "absolute",
    "top": "50%",
    "transform": "translate3d(0,-50%,0)",
  },
  "gradient": Object {
    "bottom": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 0,
    "width": "2em",
  },
}
`;

exports[`getFunctionalComponentPrevNextButtonStyles() should return correct Styles 2`] = `
Object {
  "action": Object {
    "&--hidden": Object {
      "visibility": "hidden",
    },
    "&--next": Object {
      "& $gradient": Object {
        "background": "linear-gradient(90deg, #f2f2f200 0%, #f2f2f2 50%)",
      },
      "justifyContent": "flex-end",
      "right": 0,
    },
    "&--prev": Object {
      "& $gradient": Object {
        "background": "linear-gradient(90deg, #f2f2f2 50%, #f2f2f200 100%)",
      },
      "justifyContent": "flex-start",
      "left": 0,
    },
    "alignItems": "center",
    "display": "flex",
    "height": "100%",
    "position": "absolute",
    "top": 0,
  },
  "button": Object {
    "position": "absolute",
    "top": "calc(50% - .5em)",
    "transform": "translate3d(0,calc(-50% + .375em),0)",
  },
  "gradient": Object {
    "bottom": 0,
    "pointerEvents": "none",
    "position": "absolute",
    "top": 0,
    "width": "2em",
  },
}
`;
